<resources>
  <string name="app_name">RecorderApp</string>
  <string name="recorder_action_pause">Pause</string>
  <string name="recorder_action_resume">Resume</string>
  <string name="recorder_action_stop">Stop</string>
  <string name="recorder_notification_text_running">Recorder is running</string>
  <string name="recorder_notification_text_paused">Recorder Paused</string>
  <string name="back_arrow" translatable="false">Back Arrow</string>
  <string name="action_paused">Pause</string>
  <string name="action_stop">Stop</string>
  <string name="allow_permissions">Allow permission</string>
  <string name="recorder_permission_not_found">Recorder Permission not found</string>
  <string name="recorder_permission_not_found_desc">Its a recorder app you need to allow audio recording in order to work</string>
  <string name="menu_option_settings">Settings</string>
  <string name="menu_option_recycle_bin">Recycle Bin</string>
  <string name="menu_more_option">More Options</string>
  <string name="recorder_top_bar_title">Voice Recorder</string>
  <string name="recorder_recording_completed">Recording Completed</string>
  <string name="recorder_recording_completed_text">Saved to external storage</string>
  <string name="recording_action_delete">Delete</string>
  <string name="selected_recording_count">%d selected</string>
  <string name="cancel_selection">Close Action</string>
  <string name="select_all_action">Select All</string>
  <string name="recording_top_bar_title">Recordings</string>
  <string name="recording_trash_request_success">Recordings Trashed</string>
  <string name="recording_trash_request_failed">Cannot move recordings to trash</string>
  <string name="recording_action_trash">Remove</string>
  <string name="no_recordings">No recording to display</string>
  <string name="no_recordings_in_bin">No recordings present in bin</string>
  <string name="recording_bin_top_bar_title" translatable="false">Bin</string>
  <string name="recording_info_expires_at">Expires At: %s</string>
  <string name="recording_delete_request_success">Recordings Deleted Successfully</string>
  <string name="recording_delete_request_failed">Delete request failed</string>
  <string name="recordings_restore_action">Restore</string>
  <string name="menu_option_sort_order">Sort Order</string>
  <string name="recording_restore_request_failed">Restore failed</string>
  <string name="recording_bin_explain_text">Trash files will be automatically deleted after a grace period of 30 days.</string>
  <string name="sort_option_date_created">Date Created</string>
  <string name="sort_option_duration">Duration</string>
  <string name="sort_option_name">Name</string>
  <string name="sort_order_asc">Ascending</string>
  <string name="sort_order_desc">Descending</string>
  <string name="action_cancel">Cancel</string>
  <string name="recording_permanent_delete_dialog_title">Permanent Delete</string>
  <string name="recording_permanent_delete_dialog_text">Recordings will be permanently removed are you sure you want to remove them, these cannot be restored later</string>
  <string name="recording_trash_dialog_title">Trash Items</string>
  <string name="recording_trash_dialog_text">These recordings will be trashed you can find then in recycle bin</string>
  <string name="sort_options_title">Sort By</string>
  <string name="sort_order_title">Order By</string>
  <string name="action_share">Share</string>
  <string name="share_intent_choose_title">Select an application to share files</string>
  <string name="rename_recording_dialog_title">Rename Recording</string>
  <string name="rename_recording_dialog_text">Rename selected recording, no need to add extension.</string>
  <string name="rename_label_text">Enter category name</string>
  <string name="rename_recording_action">Rename</string>
  <string name="recorder_action_start">Record</string>
  <string name="recorder_action_cancel">Cancel</string>
  <string name="recorder_recording_notification_title_canceled">Recording Cancelled</string>
  <string name="recorder_recording_notification_canceled_text">Recording canceled by the user</string>
  <string name="recording_action_restore">Restore</string>
  <string name="recording_restore_dialog_title">Restore Recordings?</string>
  <string name="recording_restore_dialog_text">Restore the given set of selected recordings</string>
  <string name="player_fast_forward">+1s</string>
  <string name="player_fast_rewind">-1s</string>
  <string name="player_action_edit">Edit</string>
  <string name="music_file_not_found_title">Audio File not found</string>
  <string name="music_file_not_found_desc">Make sure this file exists in your storage</string>
  <string name="recorder_state_preparing">Initializing</string>
  <string name="menu_option_details">Details</string>
  <string name="menu_option_share">Share</string>
  <string name="menu_option_delete">Delete</string>
  <string name="menu_more_rename">Rename</string>
  <string name="meta_data_sheet_heading">Details</string>
  <string name="player_action_add_bookmark">BookMark</string>
  <string name="player_action_show_bookmarks">Show List</string>
  <string name="audio_metadata_bitrate" translatable="false">%.2f kbps</string>
  <string name="audio_metadata_sample_rate" translatable="false">%.2f khz</string>
  <string name="audio_metadata_sample_rate_title">Sample Rate</string>
  <string name="audio_metadata_path_title">Path</string>
  <string name="audio_metadata_bitrate_title" translatable="false">Bitrate</string>
  <string name="audio_metadata_channel_title">Channel</string>
  <string name="audio_metadata_last_edit_title">Last Modified</string>
  <string name="audio_metadata_mime_type_title">MimeType</string>
  <string name="audio_metadata_duration_title">Duration</string>
  <string name="audio_metadata_file_size_title">Size</string>
  <string name="audio_metadata_name_title">Name</string>
  <string name="player_channel_resource_id">player_channel</string>
  <string name="show_recordings_list">List</string>
  <string name="player_playback_speed" translatable="false">%.2f x</string>
  <string name="player_action_speed">Speed</string>
  <string name="player_action_repeat">Repeat</string>
  <string name="player_action_mute">Mute</string>
  <string name="recording_settings_quality_high">High</string>
  <string name="recording_settings_quality_low">Low</string>
  <string name="recording_settings_quality_normal">Medium</string>
  <string name="recording_settings_quality_title">Quality</string>
  <string name="recording_settings_quality_text">Change the current audio quality higher quality means higher sample rate and bit rate</string>
  <string name="audio_quality_sample_rate_bit_rate" translatable="false">%.2f kbps - %.2f khz</string>
  <string name="recording_settings_encoder_title">Audio Encoder</string>
  <string name="recording_settings_encoder_text">Select audio encoder,changing the encoding will vary the quality and size of the recording</string>
  <string name="recording_settings_encoder_acc" translatable="false">ACC (*.m4a, *.mp3)</string>
  <string name="recording_settings_encoder_three_gpp" translatable="false">AMR NB (*.amr, .*.3gpp)</string>
  <string name="recording_settings_encoder_amr_wb" translatable="false">AMR WB (*.awb)</string>
  <string name="recording_settings_encoder_optus" translatable="false">OPUS (*.ogg)</string>
  <string name="recording_settings_encoder_amr_nb_text">Offers smaller file sizes and is well suited for low-bitrate scenarios</string>
  <string name="recording_settings_encoder_amr_wb_text">Suited for longer recordings with wider range of frequencies</string>
  <string name="recording_settings_encoder_optus_text">High quality compression and adaptability to different bit-rates</string>
  <string name="recording_settings_encoder_mpeg_text">Good quality at same bitrate with large file size</string>
  <string name="recording_settings_skip_silences_title">Skip Silences</string>
  <string name="recording_settings_skip_silences_text">Skip silences while recording</string>
  <string name="recording_settings_enable_stereo">Stereo</string>
  <string name="recording_settings_enable_stereo_text">Enable stereo</string>
  <string name="app_settings_audio">Audio</string>
  <string name="app_settings_files">Files</string>
  <string name="app_settings_common">Settings</string>
  <string name="recording_settings_file_format_title">File Naming</string>
  <string name="recording_settings_file_format_text">Pick a naming strategy file names, for now it can be either the current time or a count</string>
  <string name="recording_settings_name_format_date_time" translatable="false">%s_2022–12–31–00:00:00</string>
  <string name="recording_settings_name_format_count" translatable="false">%s_001</string>
  <string name="recording_settings_pause_recorder_on_calls">Pause Recorder</string>
  <string name="recording_settings_pause_recorder_on_call_text">Pause recorder on incomming call</string>
  <string name="storage_statistics">Storage</string>
  <string name="storage_statistics_total">Total</string>
  <string name="storage_statistics_used">Used</string>
  <string name="audio_metadata_channel_mono">Mono</string>
  <string name="audio_metadata_channel_stereo">Stereo</string>
  <string name="sort_option_size">File Size</string>
  <string name="extras_info">Extra information</string>
  <string name="turn_off_optimization">Its recommended to turn off battery optimization to run the recorder without any interruptions</string>
  <string name="cannot_launch_activity">Cannot launch this intent</string>
  <string name="rename_recording_prefix_title">Rename Prefix</string>
  <string name="rename_recording_prefix_text">Changing the prefix will add this text as prefix to each of the recording</string>
  <string name="recording_settings_change_name_prefix">Naming Prefix</string>
  <string name="app_info_source_code">Code</string>
  <string name="app_info_author">Author</string>
  <string name="preparing_recorder">Preparing Recorder…</string>
  <string name="app_shortcuts_open_last_played">Last Played Item</string>
  <string name="app_shortcuts_open_last_played_text">Opens the last played audio file</string>
  <string name="app_shortcuts_recordings">Recordings</string>
  <string name="app_shortcuts_recordings_text">Shows all the recordings of the app</string>
  <string name="toast_recording_bluetooth">Using bluetooth mic</string>
  <string name="recording_settings_use_bt_mic">Bluetooth Mic</string>
  <string name="recording_settings_use_bt_mic_text">Use bluetooth mic when available</string>
  <string name="toast_incoming_call">Incoming call</string>
  <string name="dialog_action_discard">Discard</string>
  <string name="cancel_recording_dialog_title">Cancel Recording</string>
  <string name="cancel_recording_dialog_text">Are you sure you want to cancel this recording.Once\'s cancelled it\'s not recoverable</string>
  <string name="dialog_action_done">Done</string>
  <string name="save_recording_dialog_title">Save recording</string>
  <string name="save_recording_dialog_text">Sure you are done with your recording</string>
  <string name="rename_recording_success">Renamed Recording Successfully</string>
  <string name="restore_recordings_success">Selected Recordings Restored</string>
  <string name="widget_refresh" translatable="false">Refresh</string>
  <string name="widget_error_text" translatable="false">Cannot load the widget due to something</string>
  <string name="widget_error_title" translatable="false">Failed to load widget</string>
  <string name="recordings_not_found" translatable="false">Cannot find any recordings to show</string>
  <string name="widget_recordings_preview_name" translatable="false">Recording_001</string>
  <string name="widget_recordings_preview_duration" translatable="false">00:00</string>
  <string name="recorder_state_recording" translatable="false">Recording</string>
</resources>