<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:layout_gravity="center"
  android:background="@drawable/widget_base_shape"
  android:gravity="center"
  android:orientation="vertical"
  android:padding="10dp">

  <Button
    android:id="@+id/widget_refresh"
    android:layout_width="32dp"
    android:layout_height="32dp"
    android:background="@drawable/ic_widget_refresh"
    android:contentDescription="@string/recordings_not_found"
    android:tint="@color/primary" />

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:text="@string/widget_error_title"
    android:textAlignment="center"
    android:textColor="@color/on_primary_container"
    android:textFontWeight="500"
    android:textSize="20sp" />

  <TextView
    android:id="@+id/widget_error_description"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:maxLines="2"
    android:text="@string/widget_error_text"
    android:textAlignment="center"
    android:textColor="@color/on_primary_container"
    android:textFontWeight="400"
    android:textSize="16sp" />
</LinearLayout>